fix spacing list (of learnings on project page)

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -30,6 +30,7 @@
     width: 100vw - $pad * 2;
     max-width: $content-width;
     margin: 1em auto;
+    box-sizing: border-box;
   }
 
   h2 {
